fixed spacing bug and updated colors

--- a/pages/bbc/bbc-style.css
+++ b/pages/bbc/bbc-style.css
@@ -1,48 +1,58 @@
 body {
-  --gray-100: #f6f8fa;
-  --gray-300: #d1d5da;
-  --gray-700: #586069;
+  --gray-200: #e1e4e8;
   --gray-900: #24292e;
   --blue-100: #dbedff;
   --orange-100: #ffebda;
+  --osk-yellow: #fdd465;
+  --osk-orange: #b54c42;
   --white: #fff;
   --title-z: 2;
+}
+
+.tile-box > div {
+  background-color: var(--gray-200);
 }
 
 .bbc-title {
   position: sticky;
   top: 0;
-  overflow: hidden;
   z-index: var(--title-z);
-  text-decoration: none;
-  background-color: var(--gray-300);
-  padding: 1em;
+  line-height: 1;
+  background-color: var(--white);
 }
 
 .bbc-meta {
   display: flex;
   flex-direction: row;
+  background-color: var(--osk-orange);
   & p {
-    padding-right: 0.3em;
+    padding: 0 0.3em;
     font-style: italic;
+    color: var(--osk-yellow);
+    margin: 0.5em 0;
   }
 }
 
 .bbc-menu {
-  background-color: var(--orange-100);
+  background-color: var(--osk-yellow);
   display: flex;
   flex-direction: row;
+  & p {
+    margin: 0;
+  }
   & a {
     color: var(--gray-900);
     text-align: center;
     text-decoration: none;
     padding: 0.8em 1em;
+    display: block;
   }
   & a:hover:not(.active) {
-    background-color: var(--blue-100);
+    background-color: var(--osk-orange);
   }
   & a.active {
-    background-color: var(--gray-100);
+    background-color: var(--gray-900);
+    color: var(--osk-yellow);
   }
 }
 
